--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-google-maps/api": "^2.19.2",
     "@supabase/supabase-js": "^2.38.4",
     "axios": "^1.6.2",
